--- a/ios/Flic2Example/Info.plist
+++ b/ios/Flic2Example/Info.plist
@@ -41,6 +41,7 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>bluetooth-central</string>
 		<string>external-accessory</string>
 		<string>processing</string>
