--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "npm run reverse-tcp && npm start",
+    "reverse-tcp": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-native-fontawesome": "^0.2.0",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-flic2": "",
+    "react-native-local-notifications": "^2.0.0",
+    "react-native-permissions": "^2.0.9",
+    "react-native-prompt-android": "^1.1.0",
+    "react-native-root-toast": "^3.2.0",
+    "react-native-svg": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
