--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
-    "react-native-flic2": "",
-    "react-native-local-notifications": "^2.0.0",
+    "react-native-flic2": "^0.2.0",
     "react-native-permissions": "^2.0.9",
     "react-native-prompt-android": "^1.1.0",
     "react-native-root-toast": "^3.2.0",
