--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,12 +180,36 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-prompt-android')
-    implementation project(':react-native-svg')
-    implementation project(':react-native-flic2')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    // implementation project(':react-native-prompt-android')
+    // implementation project(':react-native-svg')
+    // implementation project(':react-native-flic2')
+    // implementation fileTree(dir: "libs", include: ["*.jar"])
+    // implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    // if (enableHermes) {
+    //     def hermesPath = "../../node_modules/hermes-engine/android/";
+    //     debugImplementation files(hermesPath + "hermes-debug.aar")
+    //     releaseImplementation files(hermesPath + "hermes-release.aar")
+    // } else {
+    //     implementation jscFlavor
+    // }
+
+        implementation fileTree(dir: "libs", include: ["*.jar"])
+    //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
+      exclude group:'com.facebook.fbjni'
+    }
+    debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
+        exclude group:'com.facebook.flipper'
+    }
+    debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
+        exclude group:'com.facebook.flipper'
+    }
+
+    
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
