--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "lint": "eslint .",
     "dev": "npm run reverse-tcp && npm start",
     "reverse-tcp": "adb reverse tcp:8081 tcp:8081",
-    "postinstall": "npx jetify"
+    "postinstall": "npx jetify",
+    "reset-cache": "watchman watch-del-all; npm start -- --reset-cache;",
+    "reset-cache-android": "npm run reverse-tcp; npm run reset-cache;"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-native-fontawesome": "^0.2.0",
     "react": "^16.12.0",
-    "react-native": "^0.62.2",
+    "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
-    "react-native-flic2": "git+https://github.com/X-Guard/react-native-flic2.git#3107083ae9146322d31ecaf95ec7914b07e8e5ec",
+    "react-native-flic2": "git+https://github.com/X-Guard/react-native-flic2.git#9c8f2076200e88daa5b9d39e328455e0101bba8c",
     "react-native-permissions": "2.1.5",
     "react-native-prompt-android": "^1.1.0",
     "react-native-root-toast": "^3.2.0",
